--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@
 
 }
 
+.newContainer {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
 
 div .box {
   border: solid black 1px;
@@ -16,6 +22,13 @@ div .box {
   flex-basis: 6%;
   margin: auto;
 
+}
+
+div .newBox {
+  border: solid black 1px;
+  aspect-ratio: 1 / 1;
+  flex-basis: 25%;
+  margin: auto;
 }
 
 .coloring {
