--- a/style.css
+++ b/style.css
@@ -8,24 +8,30 @@ body {
 }
 
 button {
-  
-  border-radius: 50%;
+  margin: 10px;
+  margin-bottom: -10px;
+  border-radius: 80%;
   font-size: 25px;
   font-family:'Courier New', Courier, monospace;
   font-weight: 800;
-  background-color: rgb(231, 211, 138);
+  background-color: black;
+  color: mistyrose;
+  text-shadow: 2px 2px #ff0000;
+
 }
 
-.black {
-  margin-left: 55px;
+.random {
+  margin-right: 80px;
 }
 
 
 h1 {
   font-size: 75px;
-  color: rgb(231, 211, 138);
+  color: rgb(218, 137, 50);
+  text-shadow: 2px 2px #ff0000;
   font-family:'Courier New', Courier, monospace;
-  margin-bottom: -10px;
+  margin-bottom: -20px;
+  margin-top: -10px;
   
 }
 
@@ -33,17 +39,18 @@ h1 {
 
   width: 620px;
   height: 620px;
-  border: solid mistyrose 5px;
+  border: solid #e0a6a6 5px;
   display: grid;
   
 } 
 
 .colorToggle {
-  margin-bottom: 10px;
+  
   text-align: center;
   font-family:'Courier New', Courier, monospace;
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 800;
+  color: mistyrose;
 
 }
 
@@ -61,5 +68,27 @@ input {
   background-color: mistyrose;
  
 }
+
+.black {
+  padding: 5px;
+}
+
+.gray {
+  padding: 5px;
+}
+
+.eraser {
+  padding: 10px;
+}
+
+.random {
+  padding: 5px;
+}
+
+.reset {
+  padding: 20px;
+}
+
+
 
 
