--- a/style.css
+++ b/style.css
@@ -49,25 +49,20 @@ h1 {
 }
 
 .board {
-
   width: 650px;
   height: 650px;
   border: solid #21031e 10px;
   display: grid;
  
-
 } 
 
 .colorToggle {
-  
-  
   font-family:'Courier New', Courier, monospace;
   font-size: 24px;
   font-weight: 900;
   color: mistyrose;
   margin-top: 10px;
   margin-left: 40px;
-
 
 }
 
@@ -118,7 +113,7 @@ input {
 }
 
 footer {
-  margin-left: 140px;
+  text-align: center;
   margin-top: 30px;
   font-weight: 600;
 }
@@ -126,15 +121,102 @@ footer {
 
 @media (max-width: 768px) {
   body {
-    margin: 0;
+    display: flex;
+    flex-direction: column;
+    
   }
+
+  .flex-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .board {
+    max-width: 480px;
+    max-height: 480px;
+  }
+
+  .title {
+    margin-top: -50px;
+    margin-left: 10px;
+    
+  }
+   h1 {
+    padding-right: 0px;
+    box-shadow: 0px 3px 0px black;
+    margin-left: 70px;
+
+  
+   }
+
+  .setSize {
+    max-width: 70px;
+  }
+
+  .input {
+    max-width: 200px;
+    max-height: 40px;
+    margin-top: 20px;
+  }
+
+  .reset {
+    max-width: 70px;
+    margin-left: -120px;
+    margin-top: 20px;
+  }
+
+  .topMenu {
+    display: flex;
+  }
+
+  .colorToggle {
+    font-size: 20px;
+    text-align: center;
+  }
+
+  .buttons {
+    display: flex;
+
+  }
+
+  .black {
+    font-size: 16px;
+    margin-left: 4px;
+  }
+
+  .blue {
+    font-size: 16px;
+  }
+
+  .red {
+    font-size: 16px;
+  }
+
+  .green {
+    font-size: 16px;
+  }
+
+  .random {
+    font-size: 16px;
+  }
+
+  .eraser {
+    font-size: 16px;
+  }
+
+  
+
+
+
+  
+
+  
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
+
+
+
+
 
 
 
