--- a/style.css
+++ b/style.css
@@ -152,24 +152,29 @@ footer {
    }
 
   .setSize {
+    font-size: 12px;
     max-width: 70px;
   }
 
   .input {
     max-width: 200px;
     max-height: 40px;
-    margin-top: 20px;
+    margin-top: 12px;
+
   }
 
   .reset {
     max-width: 70px;
     margin-left: -120px;
-    margin-top: 20px;
+    margin-top: 15px;
+    font-size: 12px;
   }
 
   .topMenu {
     display: flex;
     max-width: 400px;
+    margin-left: -30px;
+   
   }
 
   .colorToggle {
@@ -184,28 +189,28 @@ footer {
   }
 
   .black {
-    font-size: 16px;
+    font-size: 12px;
     margin-left: 4px;
   }
 
   .blue {
-    font-size: 16px;
+    font-size: 12px;
   }
 
   .red {
-    font-size: 16px;
+    font-size: 12px;
   }
 
   .green {
-    font-size: 16px;
+    font-size: 12px;
   }
 
   .random {
-    font-size: 16px;
+    font-size: 12px;
   }
 
   .eraser {
-    font-size: 16px;
+    font-size: 12px;
   }
 
   
